// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectUsersAdd /> should render properly 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-6 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-2 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-9 {
  padding: 8px;
}

.emotion-8 {
  padding: 12px;
}

.emotion-7 {
  height: 20px;
}

.emotion-13 {
  padding-top: 8px;
}

.emotion-10 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-12 {
  position: relative;
}

.emotion-11 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-11:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-11:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-41 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-15 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-16 {
  clear: both;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-17 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-19 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-18 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-23 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-21 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-22 {
  color: #b3b3b3;
  padding-left: 0;
}

.emotion-43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-43 button,
.emotion-43 a {
  margin-right: 16px;
}

.emotion-42 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-42:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-42[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-42,
.emotion-42:hover,
.emotion-42:visited {
  background-color: #73b61c;
}

.emotion-42:hover {
  background-color: #96c955;
}

.emotion-42[aria-disabled=true] {
  background-color: #808080;
}

<div>
    <h3
      className="emotion-0"
    >
      Add User(s) to Project
    </h3>
    <div
      className="emotion-6"
    >
      <label
        className="emotion-1"
        htmlFor="copyLink"
      >
        A user must have an account to be added. Accounts can be created here:
      </label>
      <div
        className="emotion-5"
      >
        <input
          className="emotion-2"
          id="copyLink"
          readOnly={true}
          type="text"
          value="http://localhost/create-account"
        />
        <div
          className="emotion-4"
        >
          <button
            className="emotion-3"
            onClick={[Function]}
            type="button"
          >
            Copy Link
          </button>
        </div>
      </div>
    </div>
    <form
      action=""
      className="emotion-44"
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-7"
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <label
          className="emotion-10"
          htmlFor="emails"
        >
          Email(s)
        </label>
        <div
          className="emotion-12"
        >
          <input
            autoFocus={true}
            className="emotion-11"
            id="emails"
            name="emails"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-13"
        >
           
        </div>
      </div>
      <fieldset
        className="emotion-41"
      >
        <legend
          className="emotion-15"
        >
          Add Roles
        </legend>
        
        <div
          className="emotion-16"
        />
        <label
          className="emotion-24"
        >
          <div
            className="emotion-20"
          >
            <input
              className="emotion-17"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="ML_Tools"
            />
            <div
              className="emotion-19"
            >
              <svg
                className="emotion-18"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-23"
          >
            <span
              className="emotion-21"
            >
              ML Tools
            </span>
            <span
              className="emotion-22"
            >
              Provides access to the Job Queue, Data Sources, and Visualizer.
            </span>
          </div>
        </label>
        <label
          className="emotion-24"
        >
          <div
            className="emotion-20"
          >
            <input
              className="emotion-17"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="API_Keys"
            />
            <div
              className="emotion-19"
            >
              <svg
                className="emotion-18"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-23"
          >
            <span
              className="emotion-21"
            >
              API Keys
            </span>
            <span
              className="emotion-22"
            >
              Provides access to API Key provisioning.
            </span>
          </div>
        </label>
        <label
          className="emotion-24"
        >
          <div
            className="emotion-20"
          >
            <input
              className="emotion-17"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="User_Admin"
            />
            <div
              className="emotion-19"
            >
              <svg
                className="emotion-18"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-23"
          >
            <span
              className="emotion-21"
            >
              User Admin
            </span>
            <span
              className="emotion-22"
            >
              Provides access to User Administration for a Project.
            </span>
          </div>
        </label>
      </fieldset>
      <div
        className="emotion-43"
      >
        <button
          aria-disabled={true}
          className="emotion-42"
          onClick={[Function]}
          type="submit"
        >
          Add
        </button>
      </div>
    </form>
  </div>,
]
`;

exports[`<ProjectUsersAdd /> should render properly 2`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-6 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-2 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-9 {
  padding: 8px;
}

.emotion-8 {
  padding: 12px;
}

.emotion-7 {
  height: 20px;
}

.emotion-13 {
  padding-top: 8px;
}

.emotion-10 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-12 {
  position: relative;
}

.emotion-11 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-11:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-11:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-41 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-15 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-16 {
  clear: both;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-25 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-19 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-26 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-23 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-21 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-22 {
  color: #b3b3b3;
  padding-left: 0;
}

.emotion-43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-43 button,
.emotion-43 a {
  margin-right: 16px;
}

.emotion-42 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-42:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-42[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-42,
.emotion-42:hover,
.emotion-42:visited {
  background-color: #73b61c;
}

.emotion-42:hover {
  background-color: #96c955;
}

.emotion-42[aria-disabled=true] {
  background-color: #808080;
}

.emotion-17 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: #73b61c;
  border: 2px solid #73b61c;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-18 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 100;
}

<div>
    <h3
      className="emotion-0"
    >
      Add User(s) to Project
    </h3>
    <div
      className="emotion-6"
    >
      <label
        className="emotion-1"
        htmlFor="copyLink"
      >
        A user must have an account to be added. Accounts can be created here:
      </label>
      <div
        className="emotion-5"
      >
        <input
          className="emotion-2"
          id="copyLink"
          readOnly={true}
          type="text"
          value="http://localhost/create-account"
        />
        <div
          className="emotion-4"
        >
          <button
            className="emotion-3"
            onClick={[Function]}
            type="button"
          >
            Copy Link
          </button>
        </div>
      </div>
    </div>
    <form
      action=""
      className="emotion-44"
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-7"
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <label
          className="emotion-10"
          htmlFor="emails"
        >
          Email(s)
        </label>
        <div
          className="emotion-12"
        >
          <input
            autoFocus={true}
            className="emotion-11"
            id="emails"
            name="emails"
            onChange={[Function]}
            type="text"
            value="jane@email.com"
          />
        </div>
        <div
          className="emotion-13"
        >
           
        </div>
      </div>
      <fieldset
        className="emotion-41"
      >
        <legend
          className="emotion-15"
        >
          Add Roles
        </legend>
        
        <div
          className="emotion-16"
        />
        <label
          className="emotion-24"
        >
          <div
            className="emotion-20"
          >
            <input
              className="emotion-17"
              defaultChecked={true}
              onClick={[Function]}
              type="checkbox"
              value="ML_Tools"
            />
            <div
              className="emotion-19"
            >
              <svg
                className="emotion-18"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-23"
          >
            <span
              className="emotion-21"
            >
              ML Tools
            </span>
            <span
              className="emotion-22"
            >
              Provides access to the Job Queue, Data Sources, and Visualizer.
            </span>
          </div>
        </label>
        <label
          className="emotion-24"
        >
          <div
            className="emotion-20"
          >
            <input
              className="emotion-25"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="API_Keys"
            />
            <div
              className="emotion-19"
            >
              <svg
                className="emotion-26"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-23"
          >
            <span
              className="emotion-21"
            >
              API Keys
            </span>
            <span
              className="emotion-22"
            >
              Provides access to API Key provisioning.
            </span>
          </div>
        </label>
        <label
          className="emotion-24"
        >
          <div
            className="emotion-20"
          >
            <input
              className="emotion-25"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="User_Admin"
            />
            <div
              className="emotion-19"
            >
              <svg
                className="emotion-26"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-23"
          >
            <span
              className="emotion-21"
            >
              User Admin
            </span>
            <span
              className="emotion-22"
            >
              Provides access to User Administration for a Project.
            </span>
          </div>
        </label>
      </fieldset>
      <div
        className="emotion-43"
      >
        <button
          className="emotion-42"
          onClick={[Function]}
          type="submit"
        >
          Add
        </button>
      </div>
    </form>
  </div>,
]
`;

exports[`<ProjectUsersAdd /> should render properly 3`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-4 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-11 {
  padding-top: 12px;
}

.emotion-6 {
  display: block;
  color: #808080;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-7 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-8 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-8[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-8,
.emotion-8:hover,
.emotion-8:visited {
  color: #73b61c;
}

.emotion-8:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-23 button,
.emotion-23 a {
  margin-right: 16px;
}

.emotion-22 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-22:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-22,
.emotion-22:hover,
.emotion-22:visited {
  background-color: #73b61c;
}

.emotion-22:hover {
  background-color: #96c955;
}

.emotion-22[aria-disabled=true] {
  background-color: #808080;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 2px solid #c92300;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-0 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #c92300;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-5 {
  padding-top: 12px;
  padding-bottom: 12px;
  color: #808080;
}

.emotion-24 {
  padding-top: 24px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  justify-self: flex-start;
  color: #000000;
  font-weight: 500;
  background-color: #ffffff;
  border: 1px solid #4ac565;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
}

.emotion-12 {
  width: 40px;
  height: 40px;
  color: #ffffff;
  background-color: #4ac565;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-17 {
  padding-top: 12px;
  color: #808080;
}

.emotion-20 {
  color: #b3b3b3;
}

.emotion-19 {
  font-weight: 700;
}

.emotion-21 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-21,
.emotion-21:hover,
.emotion-21:visited {
  background-color: #808080;
}

.emotion-21:hover {
  background-color: #b3b3b3;
}

.emotion-21[aria-disabled=true] {
  background-color: #808080;
}

<div>
    <div
      className="emotion-3"
    >
      <div
        className="emotion-2"
      >
        <div
          className="emotion-0"
        >
          <svg
            data-file-name="warning.svg"
            width={20}
          />
        </div>
        <div
          className="emotion-1"
        >
          Users Not Added
        </div>
      </div>
    </div>
    <h3
      className="emotion-4"
    >
      Users that Need an Account
    </h3>
    <div
      className="emotion-5"
    >
      danny@zorroa.com
    </div>
    <div
      className="emotion-11"
    >
      <label
        className="emotion-6"
        htmlFor="copyLink"
      >
        A user must have an account to be added. Accounts can be created here:
      </label>
      <div
        className="emotion-10"
      >
        <input
          className="emotion-7"
          id="copyLink"
          readOnly={true}
          type="text"
          value="http://localhost/create-account"
        />
        <div
          className="emotion-9"
        >
          <button
            className="emotion-8"
            onClick={[Function]}
            type="button"
          >
            Copy Link
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-24"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-14"
        >
          <div
            className="emotion-12"
          >
            <svg
              data-file-name="checkmark.svg"
              width={20}
            />
          </div>
          <div
            className="emotion-1"
          >
            Users Added
          </div>
        </div>
      </div>
      <h3
        className="emotion-4"
      >
        Users Added
      </h3>
      <div
        className="emotion-17"
      >
        tester@fake.com
      </div>
      <h3
        className="emotion-4"
      >
        Roles
      </h3>
      <ul
        className="emotion-20"
      >
        <li
          className="emotion-19"
        >
          ML Tools
        </li>
      </ul>
      <div
        className="emotion-23"
      >
        <button
          className="emotion-21"
          onClick={[Function]}
          type="button"
        >
          Add Another User
        </button>
        <a
          className="emotion-22"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`<ProjectUsersAdd /> should render properly 4`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

<h2
    className="emotion-0"
  >
    Project User Admin
  </h2>,
  .emotion-5 {
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-1 {
  padding-right: 16px;
  margin-bottom: -1px;
}

.emotion-0 {
  border: 0 #73b61c solid;
  border-bottom-width: 0;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #73b61c;
}

.emotion-2 {
  border: 0 #73b61c solid;
  border-bottom-width: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 8px;
  padding-bottom: 8px;
  text-transform: uppercase;
  font-size: 17px;
  line-height: 20px;
  font-weight: 700;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<nav
    className="emotion-5"
  >
    <ul
      className="emotion-4"
    >
      <li
        className="emotion-1"
      >
        <a
          className="emotion-0"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          View All
        </a>
      </li>
      <li
        className="emotion-1"
      >
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/users/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Add User(s)
        </a>
      </li>
    </ul>
  </nav>,
  .emotion-0 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-6 {
  padding-top: 12px;
}

.emotion-1 {
  display: block;
  color: #808080;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 16px;
}

.emotion-2 {
  width: 470px;
  font-size: 15px;
  line-height: 19px;
  color: #ffffff;
  background-color: #2e2e2e;
  border-radius: 2px;
  padding: 12px;
  border: none;
  resize: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 4px;
  padding-right: 4px;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 4px;
  font-weight: 400;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3,
.emotion-3:hover,
.emotion-3:visited {
  color: #73b61c;
}

.emotion-3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3:active {
  opacity: 0;
  -webkit-transition: opacity .3s ease;
  transition: opacity .3s ease;
}

.emotion-44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-9 {
  padding: 8px;
}

.emotion-8 {
  padding: 12px;
}

.emotion-7 {
  height: 20px;
}

.emotion-13 {
  padding-top: 8px;
}

.emotion-10 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-12 {
  position: relative;
}

.emotion-11 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-11:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-11:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-41 {
  border: none;
  padding: 0;
  margin: 0;
  padding-top: 12px;
}

.emotion-15 {
  float: left;
  padding: 0;
  padding-bottom: 12px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-16 {
  clear: both;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-17 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-19 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-18 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-23 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-21 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-22 {
  color: #b3b3b3;
  padding-left: 0;
}

.emotion-43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-43 button,
.emotion-43 a {
  margin-right: 16px;
}

.emotion-42 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-42:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-42[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-42,
.emotion-42:hover,
.emotion-42:visited {
  background-color: #73b61c;
}

.emotion-42:hover {
  background-color: #96c955;
}

.emotion-42[aria-disabled=true] {
  background-color: #808080;
}

<div>
    <h3
      className="emotion-0"
    >
      Add User(s) to Project
    </h3>
    <div
      className="emotion-6"
    >
      <label
        className="emotion-1"
        htmlFor="copyLink"
      >
        A user must have an account to be added. Accounts can be created here:
      </label>
      <div
        className="emotion-5"
      >
        <input
          className="emotion-2"
          id="copyLink"
          readOnly={true}
          type="text"
          value="http://localhost/create-account"
        />
        <div
          className="emotion-4"
        >
          <button
            className="emotion-3"
            onClick={[Function]}
            type="button"
          >
            Copy Link
          </button>
        </div>
      </div>
    </div>
    <form
      action=""
      className="emotion-44"
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-8"
        >
          <div
            className="emotion-7"
          />
        </div>
      </div>
      <div
        className="emotion-13"
      >
        <label
          className="emotion-10"
          htmlFor="emails"
        >
          Email(s)
        </label>
        <div
          className="emotion-12"
        >
          <input
            autoFocus={true}
            className="emotion-11"
            id="emails"
            name="emails"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-13"
        >
           
        </div>
      </div>
      <fieldset
        className="emotion-41"
      >
        <legend
          className="emotion-15"
        >
          Add Roles
        </legend>
        
        <div
          className="emotion-16"
        />
        <label
          className="emotion-24"
        >
          <div
            className="emotion-20"
          >
            <input
              className="emotion-17"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="ML_Tools"
            />
            <div
              className="emotion-19"
            >
              <svg
                className="emotion-18"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-23"
          >
            <span
              className="emotion-21"
            >
              ML Tools
            </span>
            <span
              className="emotion-22"
            >
              Provides access to the Job Queue, Data Sources, and Visualizer.
            </span>
          </div>
        </label>
        <label
          className="emotion-24"
        >
          <div
            className="emotion-20"
          >
            <input
              className="emotion-17"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="API_Keys"
            />
            <div
              className="emotion-19"
            >
              <svg
                className="emotion-18"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-23"
          >
            <span
              className="emotion-21"
            >
              API Keys
            </span>
            <span
              className="emotion-22"
            >
              Provides access to API Key provisioning.
            </span>
          </div>
        </label>
        <label
          className="emotion-24"
        >
          <div
            className="emotion-20"
          >
            <input
              className="emotion-17"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="User_Admin"
            />
            <div
              className="emotion-19"
            >
              <svg
                className="emotion-18"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-23"
          >
            <span
              className="emotion-21"
            >
              User Admin
            </span>
            <span
              className="emotion-22"
            >
              Provides access to User Administration for a Project.
            </span>
          </div>
        </label>
      </fieldset>
      <div
        className="emotion-43"
      >
        <button
          aria-disabled={true}
          className="emotion-42"
          onClick={[Function]}
          type="submit"
        >
          Add
        </button>
      </div>
    </form>
  </div>,
]
`;
